<resources>
    <string name="app_name">Alahsa Tour</string>
    <string name="app_slogan">Helps You Get A Way</string>
    <string name="app_powered_by1">Powered by</string>
    <string name="app_powered_by2">Silah Team</string>
    <string name="second_slide_title">Dear visitor, welcome to Al-Ahsa Oasis</string>
    <string name="third_slide_title">And there is more !!</string>
    <string name="fourth_slide_title">Let\'s have enjoy in Al-Ahsa</string>
    <string name="first_slide_desc">One of the greatest cities in the Kingdom of Saudi Arabia and its famous green oases</string>
    <string name="second_slide_desc">In this application, visitors will discover the most important areas and monuments in the Al-Ahsa Oasis</string>
    <string name="third_slide_desc">The application includes tourist hotels and the most important educational schools and universities</string>
    <string name="skip_btn">SKIP</string>
    <string name="next_btn">NEXT</string>
    <string name="lets_get_started">LET\'S GET STARTED</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>
    <string name="hospitals">Hospitals</string>
    <string name="airports">Airports</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="carRent">Car Rent</string>
    <string name="featured_locations">All\nPopular\nLocations</string>
    <string name="featured_locations_description">Most of the popular locations that have the top demand in town at the moment!</string>
    <string name="most_viewed_locations">Historical Palaces</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search a location</string>
    <string name="featured_item_placeholder_title" translatable="false">ScrapYard</string>
    <string name="featured_item_placeholder_desc" translatable="false">ScrapYard is the best rated restaurant in the location at the moment.</string>
    <string name="most_viewed_item_placeholder_title" translatable="false">Chapter7</string>
    <string name="most_viewed_item_placeholder_desc" translatable="false">Chapter7 is the best rated club in the location at the moment.</string>
    <string name="navHome">Home</string>
    <string name="navSearch">Search</string>
    <string name="navAllCategories">All Categories</string>
    <string name="navAddMissingPlaces" translatable="false">Add Missing Place</string>
    <string name="navCurrency">Exchange Currency</string>
    <string name="navProfileTitle" translatable="false">Profile</string>
    <string name="navLogin" translatable="false">Log In</string>
    <string name="navProfile" translatable="false">Profile</string>
    <string name="navLogOut" translatable="false">Log Out</string>
    <string name="navCategoriesTitle">Categories</string>
    <string name="navRestaurants">Restaurants</string>
    <string name="navHotels">Hotels</string>
    <string name="navEducation">Education</string>
    <string name="navShops">Shops</string>
    <string name="navCommunicationTitle">Communication</string>
    <string name="navShare">Share</string>
    <string name="navRateUs">Rate Us</string>
    <string name="navContactUs">Contact Us</string>
    <string name="navAboutUs">About Us</string>
    <string name="navPrivacyPolicy">Privacy Policy</string>
    <string name="exitDialogTitle">Exit Al-Ahsa Tour?</string>
    <string name="exitDialogMessage">Do you really want to exit?</string>
    <string name="exitDialogConfirm">YES</string>
    <string name="exitDialogCancel">NO</string>
    <string name="allCategoriesTitle">All Categories</string>
    <string name="retailerStartUpTitle" translatable="false">GROW YOUR BUSINESS</string>
    <string name="retailerStartUpMessage" translatable="false">SCOUT will help you grow your business and gain reach by taking it online.</string>
    <string name="retailerStartUpLoginBtn" translatable="false">LOGIN</string>
    <string name="retailerStartUpSignUpBtn" translatable="false">SIGN UP</string>
    <string name="retailerStartUpHowWeWork" translatable="false">How We Work?</string>
    <string name="retailerLoginTitle" translatable="false">currency converter</string>
    <string name="retailerLoginMessage" translatable="false">Sign in to continue!</string>
    <string name="retailerLoginUsernameHint" translatable="false">Username</string>
    <string name="retailerLoginPasswordHint" translatable="false">Password</string>
    <string name="retailerLoginRememberMeCheckBox" translatable="false">Remember Me</string>
    <string name="retailerLoginForgotPassword" translatable="false">Forgot Password?</string>
    <string name="retailerLoginBtn">Convert</string>
    <string name="retailerLoginCreateAccountMsg" translatable="false">Don\'t have an account?</string>
    <string name="retailerLoginCreateAccountBtn" translatable="false">Create Account</string>
    <string name="retailerSignUpTitle" translatable="false">Create Account</string>
    <string name="retailerSignUpMessage" translatable="false">Sign up to get started!</string>
    <string name="retailerSignUpNameHint" translatable="false">Name</string>
    <string name="retailerSignUpUserNameHint" translatable="false">Username</string>
    <string name="retailerSignUpEmailHint" translatable="false">Email</string>
    <string name="retailerSignUpMobileHint" translatable="false">Mobile</string>
    <string name="retailerSignUpCreatePasswordHint" translatable="false">Create Password</string>
    <string name="retailerSignUpConfirmPasswordHint" translatable="false">Confirm Password</string>
    <string name="retailerSignUpNextBtn">NEXT</string>
    <string name="retailerSignUpLoginMsg" translatable="false">Already have an account?</string>
    <string name="retailerSignUpLoginBtn" translatable="false">Sign in</string>
    <string name="retailerSignUpChooseGenderTxt" translatable="false">Choose Gender</string>
    <string name="retailerSignUpMale" translatable="false">Male</string>
    <string name="retailerSignUpFemale" translatable="false">Female</string>
    <string name="retailerSignUpOther" translatable="false">Other</string>
    <string name="retailerSignUpDOBTxt" translatable="false">Select Date of Birth</string>
    <string name="retailerSignUpMobileMsg" translatable="false">A 6-digit verification code will be sent to the mobile number. Standard rates may apply.</string>
    <string name="verifyOTPTitle" translatable="false">CODE VERIFICATION</string>
    <string name="verifyOTPMessage" translatable="false">Enter the verification code sent to\n+919915462971</string>
    <string name="verifyOTPBtn" translatable="false">VERIFY</string>
    <string name="forgotPasswordTitle" translatable="false">FORGOT PASSWORD?</string>
    <string name="forgotPasswordMessage" translatable="false">Provide your account\'s Mobile below for\nwhich you want to reset your password</string>
    <string name="forgotPasswordMobileHint" translatable="false">Mobile</string>
    <string name="forgotPasswordNextBtn">NEXT</string>
    <string name="makeSelectionTitle" translatable="false">MAKE\nSELECTION</string>
    <string name="makeSelectionMsg" translatable="false">Select what contact detail should we be using to reset your password?!</string>
    <string name="makeSelectionViaSmsTitle" translatable="false">via sms :</string>
    <string name="makeSelectionViaSmsValueDefault" translatable="false">+919915462971</string>
    <string name="makeSelectionViaEmailTitle" translatable="false">via mail :</string>
    <string name="makeSelectionViaEmailValueDefault" translatable="false">developer.depository@gmail.com</string>
    <string name="setNewPasswordTitle" translatable="false">NEW CREDENTIALS</string>
    <string name="setNewPasswordMsg" translatable="false">Your identity has been verified.\nSet your new password.</string>
    <string name="setNewPasswordHint" translatable="false">New Password</string>
    <string name="confirmNewPasswordHint" translatable="false">Confirm Password</string>
    <string name="updatePasswordBtn" translatable="false">UPDATE</string>
    <string name="setPasswordSuccessTitle" translatable="false">PASSWORD UPDATED</string>
    <string name="setPasswordSuccessMsg" translatable="false">Your password has been updated!</string>
    <string name="setPasswordSuccessLoginBtn" translatable="false">LOGIN</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="select_lang">select language</string>
    <string name="king_faisal_university">King Faisal University (KFU)</string>
    <string name="imam_muhammad_bin_saud_islamic_university">Imam Muhammad Bin Saud Islamic University</string>
    <string name="king_suad_university">King Saud University</string>
    <string name="arab_open_university">Arab Open University</string>
    <string name="national_industrial_training_institute">National Industrial Training Institute (NITI)</string>
    <string name="technical_and_vocational_training_corporation">Technical and Vocational Training Corporation</string>
    <string name="alkhaleej_training_and_education">Alkhaleej Training and Education</string>
    <string name="wall_street_english">Wall Street English</string>
    <string name="al_anjal_national_schools">Al-anjal National Schools</string>
    <string name="future_vision_private_schools">Future Vision Private Schools</string>
    <string name="horn">Horn</string>
    <string name="restaurents">Restaurents</string>
    <string name="tendrliune">Tendrliune</string>
    <string name="khaibar">Khaibar</string>
    <string name="topaz">Topaz</string>
    <string name="bharat">Bharat</string>
    <string name="hotel">Hotel</string>
    <string name="triple_tree_hotel">Triple Tree hotel</string>
    <string name="somewhere_hotel">SomeWhere hotel</string>
    <string name="intercontinental_hotel">Intercontinental al ahssa hotel</string>
    <string name="alahssa_grand">Al ahssa Grand</string>
    <string name="coral_hotel">Coral hotel</string>
    <string name="separ_hotel">Separ Furnished Hotel</string>
    <string name="taleen_hotel">Taleen hotel</string>
    <string name="garden_hotel">Garden Plaza hotel</string>
    <string name="linh_hotel">Homes Linh hotel</string>
    <string name="alkut_hotel">Al Kut hotel</string>
    <string name="hasa_gril">Hasa Gril</string>
    <string name="al_keet">AL-Keet</string>
    <string name="casa_pasta">Casa Pasta</string>
    <string name="lava">Lava</string>
    <string name="dunkin">Dunkin Dounet</string>
    <string name="al_qaysarya">AL QAYSARYA</string>
    <string name="alqisryahdec">A historical market located in Al-Ahsa, eastern Saudi Arabia</string>
    <string name="al_qaria">AL QARIA</string>
    <string name="al_qariadec">The popular village markets is the largest commercial market in Al-Ahsa Governorate, containing 1,500 commercial units of various modern and old activities</string>
    <string name="al_sweeq">AL SWEEQ</string>
    <string name="al_sweeqdec">It is one of the most famous markets in the city of Hofuf, and is characterized by its excellent and close location in the Al-Rafa neighborhood</string>
    <string name="alahsa_mall">AL AHSA MALL</string>
    <string name="alahsa_malldec">It is one of the largest single-storey complexes, characterized by its family atmosphere, and contains many shops, restaurants and cafes .</string>
    <string name="alfawares_mall">AL FAWARES MALL</string>
    <string name="alfawares_malldec">One of the largest malls in Al-Ahsa with an area of ​​30 thousand square meters. It consists of two floors containing many shops and restaurants.</string>
    <string name="languages">languages</string>
    <string name="lang"> اللغة العربية</string>
</resources>