<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Common.LoginSignup.RetailerSignUp2Activity">

    <ImageButton
        android:id="@+id/back_arrow_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        app:tint="@android:color/black"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back_arrow"
        android:transitionName="transition_signup_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/black"
        android:transitionName="transition_signup_view1"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_btn"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/retailer_signup_illustration"
        app:layout_constraintTop_toTopOf="@+id/back_arrow_btn" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimaryDark"
        android:transitionName="transition_signup_view2"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_btn"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/back_arrow_btn" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/black"
        android:transitionName="transition_signup_view3"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_btn"
        app:layout_constraintEnd_toEndOf="@+id/retailer_signup_illustration"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/back_arrow_btn" />

    <TextView
        android:id="@+id/retailer_signup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/retailerSignUpTitle"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:transitionName="transition_signup_title"
        app:layout_constraintEnd_toStartOf="@+id/retailer_signup_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow_btn" />

    <TextView
        android:id="@+id/retailer_signup_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/retailerSignUpMessage"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:includeFontPadding="false"
        android:transitionName="transition_signup_msg"
        app:layout_constraintEnd_toStartOf="@+id/retailer_signup_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retailer_signup_title" />

    <ImageView
        android:id="@+id/retailer_signup_illustration"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/illustration_retailer_signup"
        android:transitionName="transition_signup_illustration"
        app:layout_constraintBottom_toBottomOf="@+id/retailer_signup_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/retailer_signup_title" />

    <TextView
        android:id="@+id/retailer_signup_choose_gender_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/retailerSignUpChooseGenderTxt"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retailer_signup_illustration" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/retailer_signup_gender_chipgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:singleLine="true"
        app:singleSelection="true"
        app:chipSpacing="16dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/retailer_signup_choose_gender_txt"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/retailer_signup_male_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/retailerSignUpMale"
            android:textColor="@color/chip_text_color"
            app:rippleColor="@android:color/black"
            android:textAppearance="@style/ChipText"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@android:color/black"
            app:chipStartPadding="16dp"
            app:chipEndPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/retailer_signup_female_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/retailerSignUpFemale"
            android:textColor="@color/chip_text_color"
            app:rippleColor="@android:color/black"
            android:textAppearance="@style/ChipText"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@android:color/black"
            app:chipStartPadding="16dp"
            app:chipEndPadding="16dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/retailer_signup_other_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/retailerSignUpOther"
            android:textColor="@color/chip_text_color"
            app:rippleColor="@android:color/black"
            android:textAppearance="@style/ChipText"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@android:color/black"
            app:chipStartPadding="16dp"
            app:chipEndPadding="16dp"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/retailer_signup_dob_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/retailerSignUpDOBTxt"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retailer_signup_gender_chipgroup" />

    <DatePicker
        android:id="@+id/retailer_signup_dob_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retailer_signup_dob_txt" />

    <Button
        android:id="@+id/retailer_signup_next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/black"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/retailerSignUpNextBtn"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:transitionName="transition_signup_next_btn"
        app:layout_constraintBottom_toTopOf="@+id/retailer_signup_login_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/retailer_signup_login_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:fontFamily="@font/poppins_light"
        android:text="@string/retailerSignUpLoginMsg"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="normal"
        android:includeFontPadding="false"
        android:transitionName="transition_signup_login_msg"
        app:layout_constraintBottom_toTopOf="@+id/retailer_signup_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/retailer_signup_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:padding="8dp"
        android:text="@string/retailerSignUpLoginBtn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:transitionName="transition_signup_login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>